--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,9 +13,7 @@ spec:
     spec:
       containers:
       - name: devops-training
-        image: deekshithsn/devops-training:docker_tag
-        command: ["/bin/sh"]
-        args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
+        image: 9060/spring-boot-mongo
         ports:
             - name: http
               containerPort: 8080
